--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -30,6 +30,9 @@
     margin-bottom: 15px;
     padding-right: 1%;
 }
+select {
+    width: 10%;
+}
 .PurchaseOrder{
     padding-top: 5px;
 }
@@ -51,9 +54,6 @@
 .Taxation .TaxBtn{
     margin-top: 25px;
 }
-.Select{
-    width: 150%;
-}
 
 .Add input{
     width: 30%;
@@ -72,4 +72,8 @@
     background: skyblue;
     color: #fff;
     cursor: pointer;
+}
+.Header button{
+    margin-top: 10px;
+    float: right;
 }
